# ohybridproxy

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  TODO
doc/: arch.txt
src/: cache.c  cache.h  dns2dns.c  dns2dns.h  dns2mdns.c  dns2mdns.h  dns2mdns_i.h  dns_proto.h  dns_util.h  io.c  io.h  ohybridproxy.c  ohybridproxy.h  socket.c  util.h  zonestitcher.c
test/: test_client.c  test_dns2mdns.c  test_dnsutil.c  test_mdnsresponder.c
